tests/baselines/reference/parserExportAssignment3.errors.txt
==== tests/cases/compiler/parserExportAssignment3.ts (1 errors) ====
    export =
            
!!! parserExportAssignment3.ts(1,9): error TS1003: Identifier expected.